--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,7 @@
     <string name="einstellungen">Einstellungen</string>
     <string name="verzweigungen">Verzweigungen</string>
     <string name="desc">desc</string>
-
+    <string name="nickname"></string>
     <string name="title_activity_seekarte1">Seekarte1</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>s
