--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,13 @@
     <string name="headline_seekarte">Seekarte</string>
     <string name="headline_bordbuch">Bordbuch</string>
     <string name="underheadline_bordbuch_grundlagen">Grundlagen</string>
-    <string name="headline_logbuch">Logbuch</string>
+    <string name="headline_logbuch">Logbucheintrag</string>
     <string name="bt_start">Start</string>
+
+    /*TextViews Logbuch - Buttons*/
+    <string name="bt_bordbuch">Bordbuch</string>
+    <string name="bt_abfrage">Abfrage</string>
+    <string name="bt_prüfung">Prüfung</string>
 
     /*TextViews Einstellungen -Buttons*/
     <string name="bt_einstellungen">Einstellungen</string>
@@ -36,6 +41,10 @@
     <string name="bt_fortschritt_zuruecksetzten">Fortschritt zurücksetzten</string>
     <string name="bt_crew">Die Crew</string>
 
+    /*TextViews Statistik */
+    <string name="headline_Statistik">Einstellungen</string>
+    <string name="tv_schatz">Der Schatz des Holländers!</string>
+    <string name="tv_gesamtfortschritt">Hier siehst du deinen Gesamtfortschritt:</string>
 
     /*TextViews Seekarte*/
     <string name="action_settings">Settings</string>
@@ -58,7 +67,7 @@
     sollen
     <string name="large_text_grundlagen"><![CDATA[
         "Grundlagen sind für den Anfang sehr wichtig!\n\nC ist formatfrei und benötigt keine Zeilennummern. Das heißt Sie können das Aussehen Ihres Programms frei bestimmen.\n\nC besteht nur aus Funktionen. Die Funktion main muss in jedem C-Programm genau einmal vorkommen.\n\nJeder Funktionscode beginnt mit { und endet mit }\nJede Anweisung muss mit einem Semikolon (;) abgeschlossen werden.\nKommentare werden im Programm mit /* eingeleitet und mit */ beendet.\n\nEine der wichtigsten Bibliotheksfunktionen ist printf.\n\nDurch sogenannte Escapesequenzen kann bei ihr die Ausgabe von Texten gesteuert werden. Des Weiteren kann printf Berechnungen durchführen und ihre Ergebnisse ausgeben.\n\nAlle Präprozessoranweisungen beginnen mit #.\n"Die Anweisung #include <datei> bewirkt, dass der Inhalt der Datei datei an diese Stelle kopiert wird."\n #include <stdio.h>: stdio.h enthält die Standard Ein- und Ausgabefunktionen wie z.B. printf."
-    ]]</string>
+    ]]> </string>
 
     /*Knowledgebase Mit Zahlen arbeiten*/
     <string name="large_Zahlen">
