--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="bt_einstellungen">Einstellungen</string>
     <string name="bt_statistik">Statistik</string>
     <string name="bt_leinen_los">Leinen Los!</string>
-    <string name="tv_willkommen_an_board">Willkommen an Bord XY!</string>
+    <string name="bt_beenden">Beenden</string>
+    <string name="tv_willkommen">Willkommen XY!</string>
 
     /TextViews Team_Kontaktieren/
     <string name="tv_ahoi_piraten">Ahoi mutiger Pirat!\n\nHier kannst du eine Flaschenpost\nfür uns abzuschicken!\nAuf Seemann, Tod und Teufel!</string>
@@ -51,11 +52,14 @@
     <string name="action_settings">Settings</string>
     <string name="seekarte">Seekarte</string>
     <string name="grundlagen">Grundlagen</string>
-    <string name="variablen">Variablen</string>
-    <string name="benutzerinteraktion">Benutzerinteraktion</string>
+    <string name="datentypen">Datentypen</string>
+    <string name="entscheidungen">Entscheidungen</string>
     <string name="schleifen">Schleifen</string>
-    <string name="arrays">Arrays</string>
     <string name="funktionen">Funktionen</string>
+    <string name="arrays">Arrays</string>
+    <string name="variablen">Variablen</string>
+    <string name="präprozessor">Präprozessor</string>
+
     <string name="zeiger">Zeiger</string>
     <string name="kaptn_kontaktieren">Käpt\'n kontaktieren</string>
     <string name="fortschritt_zuruecksetzten">Fortschritt zurücksetzten</string>
