Korrektur Seekarte Datenbank aktualisiert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="headline_seekarte">Seekarte</string>
     <string name="headline_bordbuch">Bordbuch</string>
     <string name="underheadline_bordbuch_grundlagen">Grundlagen</string>
-    <string name="headline_logbuch">Logbucheintrag</string>
+    <string name="headline_logbuch">Logbuch</string>
     <string name="headline_Crew">Die Crew</string>
     <string name="headline_Einstellungen">Einstellungen</string>
     <string name="headline_Statistik">Einstellungen</string>
