Dialogfenster Logbuchinfo hinzugefügt Bugfixing Fortschritt zurücksetzen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,5 +202,6 @@
     <string name="kapietel_berschrift">Kapietelüberschrift</string>
     <string name="wie_hei_t_du">Wie heißt du?</string>
     <string name="bestaetigen">Bestätigen</string>
+    <string name="beenden">Beenden</string>
     s
 </resources>
