Layout nochmals überarbeitet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     /*Ebenen*/
-    <string name="app_name">lost@C</string>
+    <string name="app_name">Lost@C</string>
     <string name="headline_seekarte">Seekarte</string>
     <string name="headline_bordbuch">Bordbuch</string>
     <string name="underheadline_bordbuch_grundlagen">Grundlagen</string>
@@ -183,10 +183,10 @@
     <string name="username">Username</string>
     <string name="Quiz">Abfrage</string>
     <string name="weiter">Weiter</string>
-    <string name="level_bestanden">Herzlichen Glückwunsch du hast alle Level bestanden</string>
+    <string name="level_bestanden">Herzlichen Glückwunsch du hast alle Level bestanden!</string>
     <string name="zur_belohnung">Zur Belohnung</string>
     <string name="belohnung">Belohnung</string>
-    <string name="hauptmenue">Hauptmenue</string>
+    <string name="hauptmenue">Hauptmenü</string>
     <string name="here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
     <string name="fragenanzahl">Fragenanzahl</string>
     <string name="_0000">0000</string>
